Solved bad contrast settings

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,9 +4,14 @@ header {
     padding: 12px 0;
     justify-content: space-between;
     filter: drop-shadow(0 5px 10px var(--shadow));
-    background-color: #00000077;
+    background-color: var(--bg-light);
     backdrop-filter: blur(2px);
     border-bottom: 1px solid var(--primary);
+}
+
+footer {
+    background-color: var(--bg-light);
+    border-top: 1px solid var(--primary);
 }
 
 header>div a {
@@ -94,6 +99,7 @@ header button::after {
     cursor: pointer;
     margin: 0 20px !important;
     text-transform: uppercase;
+    transition: .1s linear
 }
 
 :is(.navLink, .github img):hover {
